# mixed-reality-robot-arm-control-demo

./: README.md  SUPPORT.md  cgmanifest.json
MRIRAC_ROS/mrirac/: CMakeLists.txt  launch_sim.bash  package.xml
MRIRAC_ROS/mrirac/launch/: kinova_real.launch  kinova_sim.launch
MRIRAC_ROS/mrirac/src/: trajectory_planner_node.cpp
MRIRAC_ROS/mrirac_lib/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_lib/include/mrirac_lib/: mrirac_lib.h
MRIRAC_ROS/mrirac_lib/src/mrirac_lib/: mrirac_lib.cpp
MRIRAC_ROS/mrirac_msgs/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_msgs/action/: PickAndPlace.action  PoseCorrection.action
MRIRAC_ROS/mrirac_msgs/msg/: MeshObstacle.msg  MeshObstacles.msg
MRIRAC_ROS/mrirac_msgs/srv/: PlanPickAndPlace.srv  StartPickAndPlace.srv  TrajectoryPlan.srv
MRIRAC_ROS/mrirac_pick_and_place/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_pick_and_place/src/: pick_and_place_node.cpp
MRIRAC_ROS/mrirac_pose_correction/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_pose_correction/src/: pose_correction_node.cpp
MRIRAC_Unity/: .gitignore
MRIRAC_Unity/Assets/: msgbrowser_settings.asset
MRIRAC_Unity/Assets/MRIRAC/Icons/Textures/: MRIRACIconSet.asset
MRIRAC_Unity/Assets/MRIRAC/Prefabs/: Kinova.prefab  SpatialMeshes.prefab  TrajectoryLine.prefab
MRIRAC_Unity/Assets/MRIRAC/Prefabs/Obstacles/: Cube.prefab  Cylinder.prefab  PickObject.prefab  Sphere.prefab  Wall.prefab
MRIRAC_Unity/Assets/MRIRAC/Prefabs/Obstacles/BoundsControlConfigs/: RotationHandlesConfiguration.asset  ScaleHandlesConfiguration.asset  TranslationHandlesConfiguration.asset
MRIRAC_Unity/Assets/MRIRAC/Prefabs/QR/: Axis.prefab  QRCode.prefab  QRCodesManager.prefab
MRIRAC_Unity/Assets/MRIRAC/Prefabs/Robots/: RobotHandle.prefab  j2n6s300 1.prefab  j2n6s300.prefab  j2n6s300_articulated.prefab
MRIRAC_Unity/Assets/MRIRAC/RosActionMessages/mrirac_msgs/msg/: PickAndPlaceFeedback.msg
MRIRAC_Unity/Assets/MRIRAC/RosMessages/Mrirac/msg/: JointsAndTargetMsg.cs  JointsMsg.cs  MeshObstacleMsg.cs  MeshObstaclesMsg.cs  PickAndPlaceActionFeedbackMsg.cs  PickAndPlaceFeedbackMsg.cs
MRIRAC_Unity/Assets/MRIRAC/RosMessages/Mrirac/srv/: PlanPickAndPlaceRequest.cs  StartPickAndPlaceResponse.cs  TrajectoryPlanRequest.cs  TrajectoryPlanResponse.cs
MRIRAC_Unity/Assets/MRIRAC/RosMessages/MriracRelay/srv/: pose_commandRequest.cs  pose_commandResponse.cs
MRIRAC_Unity/Assets/MRIRAC/Scripts/: ClearObstacles.cs  DisableArticulation.cs  DisableMeshColliders.cs  EndEffectorPos.cs  FollowWithOffset.cs  HologramMeshManager.cs  HomeArm.cs  JointSubscriber.cs  MriracUtilities.cs  PickAndPlace.cs  PositionCorrection.cs  RobotJoint.cs  RobotManager.cs  SetAllShaders.cs  SetTargetShaders.cs  SetText.cs  SpatialMeshManager.cs  SummonObject.cs  TargetPosePublisher.cs  TrajectoryPlanner.cs  UpdateRobot.cs
MRIRAC_Unity/Assets/MRIRAC/Scripts/QR/: QRCodeDebug.cs  QRCodesManager.cs  QRCodesVisualizer.cs
MRIRAC_Unity/Assets/MRIRAC/URDF/: j2n6s200_standalone.urdf  j2n6s300.urdf  j2n6s300_standalone.urdf  niryo_one.urdf
MRIRAC_Unity/Assets/MRIRAC/URDF/Materials/: carbon_fiber.mat
MRIRAC_Unity/Assets/MRIRAC/URDF/kinova_description/meshes/: arm_1.asset  arm_2.asset  arm_3.asset  arm_4.asset  base_1.asset  base_2.asset  base_3.asset  wrist_1.asset
MRIRAC_Unity/Assets/MRIRAC/URDF/niryo_one_description/meshes/v2/stl/: arm_link.prefab  arm_link_1.asset  arm_link_2.asset  arm_link_3.asset  arm_link_4.asset  arm_link_5.asset  base_link.prefab  base_link_1.asset  elbow_link.prefab  elbow_link_1.asset  elbow_link_2.asset  elbow_link_3.asset  forearm_link.prefab  forearm_link_1.asset  forearm_link_2.asset  forearm_link_3.asset  forearm_link_4.asset  forearm_link_5.asset  hand_link.prefab  hand_link_1.asset  hand_link_2.asset  hand_link_3.asset  hand_link_4.asset  hand_link_5.asset  hand_link_6.asset  shoulder_link.prefab  shoulder_link_1.asset  shoulder_link_10.asset  shoulder_link_100.asset  shoulder_link_101.asset  shoulder_link_102.asset  shoulder_link_103.asset  shoulder_link_104.asset  shoulder_link_105.asset  shoulder_link_106.asset  shoulder_link_107.asset  shoulder_link_108.asset  shoulder_link_109.asset  shoulder_link_11.asset  shoulder_link_110.asset  (+124 more)
MRIRAC_Unity/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
MRIRAC_Unity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityCameraProfile.asset  New MixedRealityInputSystemProfile.asset  New MixedRealityPointerProfile.asset  New MixedRealitySpatialAwarenessMeshObserverProfile 1.asset  New MixedRealitySpatialAwarenessSystemProfile.asset  New MixedRealityToolkitConfigurationProfile.asset  New SpatialObjectMeshObserverProfile.asset
MRIRAC_Unity/Assets/Resources/: ROSConnectionPrefab.prefab
MRIRAC_Unity/Assets/RosMessages/Mrirac/srv/: PickPlanRequest.cs  PickPlanResponse.cs  PlanPickAndPlaceResponse.cs  StartPickAndPlaceRequest.cs
MRIRAC_Unity/Assets/Scenes/: Test.unity  kinova.unity
MRIRAC_Unity/Assets/XR/: XRGeneralSettings.asset
MRIRAC_Unity/Assets/XR/Settings/: OpenXR Package Settings.asset
MRIRAC_Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
